Added shadow plugin + Moved to java 8